--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "axios": "^1.7.8",
     "core-js": "^3.8.3",
-    "element-plus": "^2.9.0",
+    "element-plus": "^2.9.1",
+    "recordrtc": "^5.6.2",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
