--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.9.8",
     "axios": "^1.7.8",
     "core-js": "^3.8.3",
     "element-plus": "^2.9.1",
     "recordrtc": "^5.6.2",
+    "video.js": "8.21.0",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
+    "@ffmpeg/core": "^0.10.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "less": "^4.2.1",
-    "less-loader": "^12.2.0"
+    "less-loader": "^12.2.0",
+    "worker-loader": "^3.0.8"
   },
   "browserslist": [
     "> 1%",
