--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "recordrtc": "^5.6.2",
     "video.js": "8.21.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
