--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 # .env 文件
 VUE_APP_API_BASE_URL=http://api.trans.teio.xyz:80/api/web
 VUE_APP_API_ADDTION_URL=http://api.synt.teio.xyz:80/api/web
+VUE_APP_LOGO=@/assets/logo.png
+VUE_APP_NAME=厦门大学智影动力AIGC系统
+VUE_APP_SUBTITLE=语音生成
