--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.8",
     "core-js": "^3.8.3",
     "element-plus": "^2.9.5",
+    "pinia": "^3.0.1",
     "recordrtc": "^5.6.2",
     "video.js": "8.21.0",
     "vue": "^3.2.13",
