解决刷新报错问题，添加nginx路径

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # .env 文件
-VUE_APP_API_BASE_URL=https://teio.xyz/api/web
+VUE_APP_API_BASE_URL=https://teio.xyz/api/minnan
 VUE_APP_LOGO=@/assets/logo.png
 VUE_APP_NAME=厦门大学智影动力AIGC系统
 VUE_APP_SUBTITLE=语音生成
